# 4ward

./: .bazelignore  .bazelrc  .clang-tidy  .editorconfig  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  MODULE.bazel  README.md  REFACTORING.md  REPO.bazel  ROADMAP.md  STATUS.md  STEFFENS_AI_WORKFLOW.md  buf.yaml  coverage.sh  detekt.yml  dev  dev.sh  format.sh  index.html  lint.sh  mkdocs.yml  sitemap.xml
bazel/: BUILD.bazel  README.md  Runfiles.kt  RunfilesTest.kt  behavioral_model.patch  cc_shim.bzl  docs_bundle.bzl  dokka.bzl  fourward_pipeline.bzl  grpc_kotlin.patch  p4c.bzl  proto_doc.bzl  protoc_gen_doc.BUILD  protoc_gen_doc_wrapper.py
bazel/gmp/: BUILD.bazel  MODULE.bazel
bcr_test_module/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
cli/: AnsiColor.kt  BUILD.bazel  Compile.kt  ExitCode.kt  InProcessSimulator.kt  Main.kt  NetworkServe.kt  NetworkServeTest.kt  NetworkSim.kt  NetworkSimCliTest.kt  NetworkStf.kt  NetworkStfTest.kt  README.md  Run.kt  Simulate.kt  TraceFormatter.kt  TraceFormatterTest.kt  cram.bzl  run_cram.py
cli/tests/: BUILD.bazel  basic_table.sh  basic_table.t  compile.sh  compile.t  cram.bzl  errors.sh  errors.t  getting_started.sh  getting_started.t  packet_mismatch.sh  packet_mismatch.t  run_cram.py  textproto.sh  textproto.t
dvaas/: BUILD.bazel  DvaasService.kt  DvaasServiceTest.kt  DvaasTestHarness.kt  MirrorTestbedTest.kt  SonicPinsAdapter.kt  SonicPinsAdapterTest.kt  TestVectorValidator.kt  TestVectorValidatorTest.kt  dvaas.proto
e2e_tests/: BUILD.bazel  GoldenFile.kt  README.md  RunfilesHelper.kt  bmv2_diff.bzl  compile_test.bzl  corpus.bzl  diff_test.bzl  p4c.bzl  p4testgen.bzl
e2e_tests/assert_log_msg/: AssertLogMsgTest.kt  BUILD.bazel  assert_log_msg.p4  assert_log_msg.stf
e2e_tests/basic_table/: BUILD.bazel  BasicTableTest.kt  basic_table.p4  basic_table.stf
e2e_tests/bmv2_diff/: BUILD.bazel  Bmv2Benchmark.kt  Bmv2DiffTest.kt  Bmv2Runner.kt  bmv2_driver.cpp
e2e_tests/constrained_table/: BUILD.bazel  constrained_table.p4
e2e_tests/corpus/: BUILD.bazel  CorpusStfTest.kt  gauntlet_invalid_hdr_short_circuit-bmv2.stf  pna-action-selector-1.stf  pna-action-selector.stf  pna-add-on-miss.stf  pna-add_on_miss_action_name.stf  pna-direction-main-parser-err.stf  pna-direction.stf  pna-dpdk-add_on_miss0.stf  pna-dpdk-add_on_miss1.stf  pna-dpdk-bvec_union.stf  pna-dpdk-direct-counter-learner.stf  pna-dpdk-direct-counter.stf  pna-dpdk-header-stack-assignment.stf  pna-dpdk-parser-state-err.stf  pna-dpdk-small_sample.stf  pna-dpdk-table-key-consolidation-learner-1.stf  pna-dpdk-table-key-consolidation-learner-3.stf  pna-dpdk-table-key-consolidation-learner-4.stf  pna-dpdk-table-key-consolidation-learner-5.stf  pna-dpdk-table-key-consolidation-learner-6.stf  pna-dpdk-table-key-consolidation-learner-7.stf  pna-dpdk-table-key-use-annon.stf  pna-dpdk-union-bmv2.stf  pna-elim-hdr-copy-dpdk.stf  pna-example-SelectByDirection.stf  pna-example-SelectByDirection1.stf  pna-example-SelectByDirection2.stf  pna-example-bAnd-in-tableKey.stf  pna-example-dpdk-optional.stf  pna-example-dpdk-varbit-1.stf  pna-example-dpdk-varbit.stf  pna-example-header-union.stf  pna-example-header-union1.stf  pna-example-tcp-connection-tracking.stf  pna-example-template.stf  pna-example-tunnel.stf  pna-issue3041.stf  pna-mux-dismantle.stf  (+49 more)
e2e_tests/dvaas_poc/: BUILD.bazel  dvaas_poc.p4  (+1 more)
e2e_tests/stf/: Runner.kt  (+7 more)
examples/: BUILD.bazel  README.md  basic_table.p4  basic_table.stf  index.html  passthrough.p4  passthrough.stf  tutorial.t
gnmi/: BUILD.bazel  gnmi.proto  gnmi_ext.proto
network/: BUILD.bazel  Forwarding.kt  NetworkP4Runtime.kt  NetworkP4RuntimeTest.kt
p4c_backend/: BUILD.bazel  README.md  backend.cpp  backend.h  main.cpp  midend.cpp  midend.h  options.cpp  options.h
p4runtime/: BUILD.bazel  Bytestrings.kt  BytestringsTest.kt  ConstraintValidator.kt  ConstraintValidatorTest.kt  DataplaneBenchmark.kt  DataplaneService.kt  DataplaneServiceTest.kt  EnrichedTraceGoldenTest.kt  EntityReader.kt  EntityReaderTest.kt  GnmiService.kt  GnmiServiceTest.kt  GoldenErrorTest.kt  P4RuntimeConformanceTest.kt  P4RuntimeConstraintTest.kt  P4RuntimeServer.kt  P4RuntimeServerTest.kt  P4RuntimeService.kt  P4RuntimeServiceTest.kt  P4RuntimeTestHarness.kt  P4RuntimeTranslationTest.kt  P4RuntimeWriteErrorTest.kt  PacketBroker.kt  PacketBrokerTest.kt  PacketHeaderCodec.kt  PacketHeaderCodecTest.kt  README.md  ReadWriteMutex.kt  ReferenceValidator.kt  ReferenceValidatorTest.kt  RoleMap.kt  RoleMapTest.kt  SaiP4ConstraintTest.kt  SaiP4E2ETest.kt  TraceEnricher.kt  TraceEnricherTest.kt  TypeTranslator.kt  TypeTranslatorTest.kt  WriteValidator.kt  (+5 more)
p4runtime_cc/: BUILD.bazel  fourward_server.cc  fourward_server.h  fourward_server_test.cc
simulator/: Architecture.kt  ArchitectureHelpers.kt  BUILD.bazel  BitVector.kt  BitVectorTest.kt  BufferBackedFieldMap.kt  Checksum.kt  ChecksumTest.kt  CompactFieldMap.kt  CompactFieldMapTest.kt  ConsolidatedPacketAllocator.kt  DeepCopyFieldStatsTest.kt  DefaultValues.kt  DefaultValuesTest.kt  Environment.kt  EnvironmentTest.kt  ErrorCodes.kt  ExternHandler.kt  FlatBufferIntegrationTest.kt  Hash.kt  HashTest.kt  HeaderStackView.kt  HeaderStackViewTest.kt  HeaderValTest.kt  HeaderView.kt  HeaderViewTest.kt  Interpreter.kt  InterpreterControlTest.kt  InterpreterExprTest.kt  InterpreterInlineActionTest.kt  InterpreterPacketTest.kt  InterpreterParserTest.kt  InterpreterTestDsl.kt  InterpreterTraceEventTest.kt  LayoutComputer.kt  LayoutComputerTest.kt  Main.kt  MatchesFieldMatchTest.kt  NetworkSimulator.kt  NetworkSimulatorTest.kt  (+27 more)
stf/: BUILD.bazel  README.md  Runner.kt  RunnerTest.kt  StfParserTest.kt
tools/: BUILD.bazel  README.md  check-bzl-library.sh  coverage.sh  dev.sh  diff-coverage.sh  docs-index.html  docs.sh  format.sh  gen-docs.sh  lint.sh  run_dvaas_poc.sh  run_dvaas_sai.sh
web/: BUILD.bazel  ControlGraphExtractor.kt  ControlGraphExtractorTest.kt  ParserGraphExtractor.kt  ParserGraphExtractorTest.kt  PlaygroundServer.kt  README.md  WebServer.kt  WebServerTest.kt
(+8415 files in other folders)
