load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@rules_license//rules:license.bzl", "license")
# --- License metadata ---
#
# Declares the project license once at the root.
# All subpackages inherit via default_package_metadata.

package(default_package_metadata = [":license"])

exports_files(["LICENSE"])

license(
    name = "license",
    license_kinds = ["@rules_license//licenses/spdx:Apache-2.0"],
    license_text = "LICENSE",
)

# --- Build tools ---

buildifier(name = "buildifier")

# Exposes .clang-tidy to the bazel_clang_tidy aspect.
filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
    visibility = ["//visibility:public"],
)

kt_jvm_binary(
    name = "ktfmt",
    main_class = "com.facebook.ktfmt.cli.Main",
    runtime_deps = ["@maven//:com_facebook_ktfmt"],
)

kt_jvm_binary(
    name = "detekt",
    main_class = "io.gitlab.arturbosch.detekt.cli.Main",
    runtime_deps = ["@maven//:io_gitlab_arturbosch_detekt_detekt_cli"],
)

buildifier_test(
    name = "buildifier_test",
    srcs = glob(
        [
            "**/*.bazel",
            "**/*.bzl",
            "MODULE.bazel",
        ],
        allow_empty = True,
        exclude = ["bazel-*/**"],
    ),
)
