module(
    name = "fourward",
    version = "0.1.0",
    bazel_compatibility = [">=9.0.0"],
)

# --- Core build rules ---

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_kotlin", version = "2.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")

# --- Protobuf & gRPC ---

bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "grpc-java", version = "1.78.0")
bazel_dep(name = "grpc_kotlin", version = "1.5.0")

# --- Boost (needed by behavioral_model) ---
# Match versions declared by p4c to avoid Bzlmod resolution conflicts.

bazel_dep(name = "boost.container", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.filesystem", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.program_options", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.thread", version = "1.90.0.bcr.1")

# --- P4 ecosystem ---

# p4runtime provides p4info.proto, p4runtime.proto, and p4data.proto.
bazel_dep(name = "p4runtime", version = "1.5.0.bcr.1")

# p4c provides the compiler frontend and midend that our backend builds on.
# Point this at your fork during development; remove the override when
# the 4ward backend has been upstreamed into p4c proper.
bazel_dep(name = "p4c", version = "head")
git_override(
    module_name = "p4c",
    commit = "f36edeb88709fc6f5e44c3b6c40a666a0af2313a",
    remote = "https://github.com/smolkaj/p4c.git",
)

# BMv2 (behavioral-model) — v1model reference simulator for differential testing.
# Patched to add native Bazel build rules (no Thrift, no nanomsg).
bazel_dep(name = "behavioral_model", version = "head")
git_override(
    module_name = "behavioral_model",
    commit = "6c7c93e5484e069c539b5c990bf37c531599894a",
    patch_strip = 1,
    patches = ["//bazel:behavioral_model.patch"],
    remote = "https://github.com/p4lang/behavioral-model.git",
)

# --- JVM dependencies ---

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.protobuf:protobuf-java:4.29.3",
        "com.google.protobuf:protobuf-kotlin:4.29.3",
        "junit:junit:4.13.2",
        "com.facebook:ktfmt:0.61",
        "io.gitlab.arturbosch.detekt:detekt-cli:1.23.8",
        # gRPC Kotlin runtime
        "io.grpc:grpc-kotlin-stub:1.4.3",
        "io.grpc:grpc-netty-shaded:1.68.1",
        "io.grpc:grpc-services:1.68.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.1",
        "javax.annotation:javax.annotation-api:1.3.2",
    ],
    known_contributing_modules = [
        "grpc-java",
        "protobuf",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# --- Dev tools ---

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

# Runs clang-tidy as a Bazel aspect — no compile_commands.json needed.
# Usage: bazel build //p4c_backend/... --config=clang-tidy
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    # Pin to the commit before "Add builtin include flags for clang-tidy"
    # (c4d35e0).  That commit passes cc_toolchain.built_in_include_directories
    # as explicit -isystem flags, which promotes /usr/include out of clang's
    # internal search order and breaks #include_next from <cstdlib>.
    commit = "9e54bbb15d1939a9d030c52f3032886a0b278f98",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)
