module(
    name = "fourward",
    version = "0.1.0",
    bazel_compatibility = [">=9.0.0"],
)

# --- Core build rules ---

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_kotlin", version = "2.3.0")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")

# --- Protobuf & gRPC ---

bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "grpc-java", version = "1.78.0")
bazel_dep(name = "grpc_kotlin", version = "1.5.0")

# --- P4 ecosystem ---

# p4runtime provides p4info.proto, p4runtime.proto, and p4data.proto.
bazel_dep(name = "p4runtime", version = "1.5.0.bcr.1")

# p4c provides the compiler frontend and midend that our backend builds on.
# The git_override adds targets not yet in upstream p4c:
#   - //p4include package (exports_files + filegroup for individual includes)
#   - //testdata/p4_16_samples:* (exports_files for corpus/BMv2 tests)
#   - macOS build fix (HAVE_PIPE2 / HAVE_UCONTEXT_H)
# Upstream PR: https://github.com/p4lang/p4c/pull/5533
# Once merged and released to BCR, drop the git_override.
bazel_dep(name = "p4c", version = "1.2.5.11")
git_override(
    module_name = "p4c",
    commit = "2a38af86afbee54d656a041e125a2d14945b9215",
    remote = "https://github.com/smolkaj/p4c.git",
)

# p4-constraints validates @entry_restriction / @action_restriction annotations.
bazel_dep(name = "p4_constraints", version = "20260311.0")

# BMv2 (behavioral-model) — v1model reference simulator for differential testing.
# Patched to add native Bazel build rules (no Thrift, no nanomsg).
# Dev-only: not needed by downstream consumers of the 4ward module.
bazel_dep(name = "behavioral_model", version = "head", dev_dependency = True)
git_override(
    module_name = "behavioral_model",
    commit = "6c7c93e5484e069c539b5c990bf37c531599894a",
    patch_strip = 1,
    patches = ["//bazel:behavioral_model.patch"],
    remote = "https://github.com/p4lang/behavioral-model.git",
)

# --- JVM dependencies ---

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.protobuf:protobuf-java:4.29.3",
        "com.google.protobuf:protobuf-java-util:4.29.3",
        "com.google.protobuf:protobuf-kotlin:4.29.3",
        "junit:junit:4.13.2",
        "com.facebook:ktfmt:0.61",
        "io.gitlab.arturbosch.detekt:detekt-cli:1.23.8",
        # gRPC Kotlin runtime
        "io.grpc:grpc-kotlin-stub:1.4.3",
        "io.grpc:grpc-netty-shaded:1.68.1",
        "io.grpc:grpc-services:1.68.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.1",
        "javax.annotation:javax.annotation-api:1.3.2",
    ],
    known_contributing_modules = [
        "grpc-java",
        "protobuf",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# --- Python (cram test runner) ---

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

# --- Dev tools ---

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

# Runs clang-tidy as a Bazel aspect — no compile_commands.json needed.
# Usage: bazel build //p4c_backend/... --config=clang-tidy
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    # Pin to the commit before "Add builtin include flags for clang-tidy"
    # (c4d35e0).  That commit passes cc_toolchain.built_in_include_directories
    # as explicit -isystem flags, which promotes /usr/include out of clang's
    # internal search order and breaks #include_next from <cstdlib>.
    commit = "9e54bbb15d1939a9d030c52f3032886a0b278f98",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

# --- Documentation tool binaries ---

bazel_dep(name = "rules_doxygen", version = "2.6.2", dev_dependency = True)

doxygen_extension = use_extension(
    "@rules_doxygen//:extensions.bzl",
    "doxygen_extension",
    dev_dependency = True,
)
use_repo(doxygen_extension, "doxygen")

_http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

_http_file(
    name = "dokka_cli",
    downloaded_file_path = "dokka-cli.jar",
    sha256 = "5f70f358160b48ef9763b2ced4e96037f1bfc8d0122de692550ca320ab4b9f20",
    url = "https://repo1.maven.org/maven2/org/jetbrains/dokka/dokka-cli/2.0.0/dokka-cli-2.0.0.jar",
)

_http_file(
    name = "dokka_base",
    downloaded_file_path = "dokka-base.jar",
    sha256 = "0411d1c38a1d100cbd346c6340c3c4b5f154a48a9c119ed11893d6fae94c91aa",
    url = "https://repo1.maven.org/maven2/org/jetbrains/dokka/dokka-base/2.0.0/dokka-base-2.0.0.jar",
)

_http_file(
    name = "dokka_analysis",
    downloaded_file_path = "analysis-kotlin-descriptors.jar",
    sha256 = "829788c40891a2a3c4b9435cb9ec80d645560d926e9fbbd08ccc29e8e4f1eb7c",
    url = "https://repo1.maven.org/maven2/org/jetbrains/dokka/analysis-kotlin-descriptors/2.0.0/analysis-kotlin-descriptors-2.0.0.jar",
)

_http_file(
    name = "dokka_kotlinx_html",
    downloaded_file_path = "kotlinx-html-jvm.jar",
    sha256 = "b68f39cd9ad7b46de0a0e77e7f5908d4e7661f3d0c85d2d9171543fcd5b156fb",
    url = "https://repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-html-jvm/0.9.1/kotlinx-html-jvm-0.9.1.jar",
)

_http_file(
    name = "dokka_freemarker",
    downloaded_file_path = "freemarker.jar",
    sha256 = "04d65ec1bde6cea20e3495d5e78ef96ab774d9936434861d3254bd88e7e94f92",
    url = "https://repo1.maven.org/maven2/org/freemarker/freemarker/2.3.32/freemarker-2.3.32.jar",
)
