module(
    name = "fourward",
    version = "head",  # Updated to yyyymmdd.p on release branches.
    bazel_compatibility = [">=8.0.0"],
)

# --- Core build rules ---

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_kotlin", version = "2.3.20")

# `dev_dependency` so the strict-deps toolchain only activates when
# 4ward is the root module; BCR consumers see the default rules_kotlin
# toolchain. Same scoping as the `single_version_override` below.
register_toolchains(
    "//bazel:fourward_kotlin_toolchain",
    dev_dependency = True,
)

bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")

# --- Protobuf & gRPC ---

bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "grpc", version = "1.80.0")  # For cc_grpc_library (dataplane_cc_grpc).
bazel_dep(name = "grpc-java", version = "1.78.0.bcr.1")
bazel_dep(name = "grpc_kotlin", version = "1.5.0")

# WORKAROUND for strict-deps issues in grpc_kotlin@1.5.0 — see
# `bazel/grpc_kotlin.patch` for the details and upstream PR link.
single_version_override(
    module_name = "grpc_kotlin",
    patch_strip = 1,
    patches = ["//bazel:grpc_kotlin.patch"],
)

# --- P4 ecosystem ---

# p4runtime provides p4info.proto, p4runtime.proto, and p4data.proto.
bazel_dep(name = "p4runtime", version = "1.5.0.bcr.1")

# Transitively pulled by @p4runtime; declared directly so our BUILD
# files can reference it by apparent name under strict deps.
# googleapis-java enables //google/rpc:rpc_java_proto.
bazel_dep(name = "googleapis", version = "0.0.0-20260402-c8ca5bce")
bazel_dep(name = "googleapis-java", version = "1.1.5")

# p4c provides the compiler frontend and midend that our backend builds on.
# BCR consumers get p4c 1.2.5.11.bcr.1 (which has //p4include, testdata
# exports, and the macOS build fix). Our own dev builds additionally pin
# to the smolkaj/p4c fork via git_override — only honored when fourward
# is the root module — because our e2e_tests/p4testgen PNA suite needs
# the drop-by-default fix (p4lang/p4c#5569) that is still open upstream.
# The fork is upstream main plus that single patch; PR #5570 (PNA STF
# backend) is already in upstream main. Drop the git_override once
# #5569 lands and ships in a released p4c.
bazel_dep(name = "p4c", version = "1.2.5.11.bcr.1")
git_override(
    module_name = "p4c",
    commit = "93932df3cc9fe7de596ad257f6eee7bcddc0fd58",
    remote = "https://github.com/smolkaj/p4c.git",
)

# p4-constraints validates @entry_restriction / @action_restriction annotations.
bazel_dep(name = "p4_constraints", version = "20260311.0")

# grpc with Bazel 9 support (native rule autoloading + rules_swift compat).
# TODO: Drop once grpc publishes a Bazel-9-compatible release to BCR.
git_override(
    module_name = "grpc",
    commit = "a09a3af54b870cf9d1064f807355721451196329",
    remote = "https://github.com/smolkaj/grpc.git",
)

# BMv2 (behavioral-model) — v1model reference simulator for differential testing.
# Patched to add native Bazel build rules (no Thrift, no nanomsg).
# Dev-only: not needed by downstream consumers of the 4ward module.
bazel_dep(name = "behavioral_model", version = "head", dev_dependency = True)
git_override(
    module_name = "behavioral_model",
    commit = "6c7c93e5484e069c539b5c990bf37c531599894a",
    patch_strip = 1,
    patches = ["//bazel:behavioral_model.patch"],
    remote = "https://github.com/p4lang/behavioral-model.git",
)

# --- JVM dependencies ---

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "fourward_maven",
    artifacts = [
        "com.google.protobuf:protobuf-java:4.29.3",
        "com.google.protobuf:protobuf-java-util:4.29.3",
        "junit:junit:4.13.2",
        "com.facebook:ktfmt:0.61",
        "io.gitlab.arturbosch.detekt:detekt-cli:1.23.8",
        # gRPC runtime. We depend on these via @fourward_maven rather
        # than @grpc-java//... so that BCR consumers don't need to bless
        # grpc-java as a contributor to the shared @maven repo.
        "io.grpc:grpc-api:1.78.0",
        "io.grpc:grpc-inprocess:1.78.0",
        "io.grpc:grpc-kotlin-stub:1.4.3",
        "io.grpc:grpc-netty:1.78.0",
        "io.grpc:grpc-stub:1.78.0",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "fourward_maven")

# Bless grpc-java and protobuf as contributors to the shared @maven repo
# so grpc-java's internal BUILD files resolve. See bcr_test_module/ for
# the rationale and the boilerplate BCR consumers need to replicate.
maven.install(
    known_contributing_modules = [
        "grpc-java",
        "protobuf",
    ],
)
use_repo(maven, "maven")

# --- Python (cram test runner) ---

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

# --- Dev tools ---

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

# Runs clang-tidy as a Bazel aspect — no compile_commands.json needed.
# Usage: bazel build //p4c_backend/... --config=clang-tidy
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    # Pin to the commit before "Add builtin include flags for clang-tidy"
    # (c4d35e0).  That commit passes cc_toolchain.built_in_include_directories
    # as explicit -isystem flags, which promotes /usr/include out of clang's
    # internal search order and breaks #include_next from <cstdlib>.
    commit = "9e54bbb15d1939a9d030c52f3032886a0b278f98",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)
