"""Repo-wide Bazel settings for 4ward.

Applies the Apache-2.0 license in //:license as default package metadata
for every target and lists directories Bazel should ignore when globbing.
"""

repo(default_package_metadata = ["//:license"])

ignore_directories([
    # Bazel output symlinks. The last component depends on the workspace
    # directory name (bazel-4ward, bazel-bcr_test_module, …) so use a glob
    # rather than listing each one.
    "bazel-*",
    "**/bazel-*",
    # Claude Code workspace directory.
    ".claude",
])
