# Build rules and patches for third-party dependencies.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

bzl_library(
    name = "fourward_pipeline_bzl",
    srcs = ["fourward_pipeline.bzl"],
    visibility = ["//visibility:public"],
)

# Markdown API docs for fourward_pipeline.bzl. The committed copy at
# userdocs/reference/bazel.md is refreshed by tools/gen-docs.sh and
# kept in sync by a CI staleness check.
stardoc(
    name = "fourward_pipeline_docs",
    out = "fourward_pipeline.md",
    input = "fourward_pipeline.bzl",
    deps = [":fourward_pipeline_bzl"],
)

# `experimental_report_unused_deps` is intentionally not enabled: it
# misfires on 4ward's mix of rules_jvm_external Maven artifacts (e.g.
# `@fourward_maven//:io_grpc_grpc_api`) and Bazel-native targets that
# provide the same classes (e.g. `@grpc-java//api`, injected by
# grpc_kotlin's macro). 4ward uses the Maven style by design so BCR
# consumers don't need `known_contributing_modules` boilerplate (see
# MODULE.bazel and bcr_test_module/).
define_kt_toolchain(
    name = "fourward_kotlin_toolchain",
    experimental_strict_kotlin_deps = "error",
)
