# Build rules and patches for third-party dependencies.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_kotlinc_options")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

kt_jvm_library(
    name = "runfiles",
    srcs = ["Runfiles.kt"],
    visibility = ["//visibility:public"],
    deps = ["@rules_java//java/runfiles"],
)

kt_jvm_test(
    name = "RunfilesTest",
    srcs = ["RunfilesTest.kt"],
    data = [
        "Runfiles.kt",
        "//p4c_backend:p4c-4ward",
        "@p4c//p4include",
        "@p4c//p4include:core.p4",
    ],
    jvm_flags = [
        "-Dfourward.p4include=$(rlocationpath @p4c//p4include:core.p4)",
    ],
    test_class = "fourward.bazel.RunfilesTest",
    deps = [
        ":runfiles",
        "@fourward_maven//:junit_junit",
    ],
)

bzl_library(
    name = "fourward_pipeline_bzl",
    srcs = ["fourward_pipeline.bzl"],
    visibility = ["//visibility:public"],
)

# `experimental_report_unused_deps` is intentionally not enabled: it
# misfires on 4ward's mix of rules_jvm_external Maven artifacts (e.g.
# `@fourward_maven//:io_grpc_grpc_api`) and Bazel-native targets that
# provide the same classes (e.g. `@grpc-java//api`, injected by
# grpc_kotlin's macro). 4ward uses the Maven style by design so BCR
# consumers don't need `known_contributing_modules` boilerplate (see
# MODULE.bazel and bcr_test_module/).

# `warn = "error"` (Kotlin's `-Werror`) catches deprecation, redundant
# operators, suspend-in-finally, and other categories that downstream
# linters flag — see #531 for the catalog. Keeping these as errors
# locally means contributors see them at compile time, not after a
# downstream sync.
kt_kotlinc_options(
    name = "fourward_kotlinc_options",
    warn = "error",
)

define_kt_toolchain(
    name = "fourward_kotlin_toolchain",
    experimental_strict_kotlin_deps = "error",
    kotlinc_options = ":fourward_kotlinc_options",
)
