module(
    name = "fourward_bcr_test",
    version = "0",
)

bazel_dep(name = "fourward", version = "")
local_path_override(
    module_name = "fourward",
    path = "..",
)

bazel_dep(name = "rules_jvm_external", version = "6.10")

# grpc-java and protobuf both contribute to the default @maven repo via
# rules_jvm_external. Bless both so their artifacts are available when
# fourward is consumed as a dependency. Consumers of @fourward must do
# the same in their own MODULE.bazel.
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    known_contributing_modules = [
        "grpc-java",
        "protobuf",
    ],
)
use_repo(maven, "maven")
