load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

exports_files(
    ["run_cram.py"],
    visibility = ["//:__subpackages__"],
)

kt_jvm_library(
    name = "cli_lib",
    srcs = glob(
        ["*.kt"],
        exclude = ["*Test.kt"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//e2e_tests/stf:stf_runner",
        "//simulator:simulator_java_proto",
        "//simulator:simulator_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:com_google_protobuf_protobuf_java_util",
    ],
)

kt_jvm_binary(
    name = "4ward",
    data = [
        "//p4c_backend:p4c-4ward",
        "@p4c//p4include",
    ],
    main_class = "fourward.cli.MainKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":cli_lib"],
)

kt_jvm_test(
    name = "TraceFormatterTest",
    srcs = ["TraceFormatterTest.kt"],
    test_class = "fourward.cli.TraceFormatterTest",
    deps = [
        ":cli_lib",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "NetworkStfTest",
    srcs = ["NetworkStfTest.kt"],
    test_class = "fourward.cli.NetworkStfTest",
    deps = [
        ":cli_lib",
        "//simulator:simulator_lib",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "NetworkSimCliTest",
    srcs = ["NetworkSimCliTest.kt"],
    data = [
        "//e2e_tests/basic_table:basic_table_pb",
        "//e2e_tests/network:inline_multicast.nstf",
        "//e2e_tests/network:mixed_entries.nstf",
        "//e2e_tests/network:s1.stf",
        "//e2e_tests/network:s2.stf",
        "//e2e_tests/network:two_switch.nstf",
        "//e2e_tests/network:two_switch_fail.nstf",
        "//e2e_tests/network:two_switch_inline.nstf",
        "//e2e_tests/trace_tree:multicast_pb",
    ],
    test_class = "fourward.cli.NetworkSimCliTest",
    deps = [
        ":cli_lib",
        "//e2e_tests:golden_file",
        "@fourward_maven//:junit_junit",
    ],
)
