load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_testonly = True)

bzl_library(
    name = "corpus_bzl",
    srcs = ["corpus.bzl"],
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "golden_file",
    srcs = ["GoldenFile.kt"],
    visibility = ["//visibility:public"],
    deps = [
        "@fourward_maven//:junit_junit",
    ],
)
