load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

bzl_library(
    name = "bmv2_diff_bzl",
    srcs = ["bmv2_diff.bzl"],
    visibility = ["//e2e_tests:__subpackages__"],
    deps = ["//bazel:fourward_pipeline_bzl"],
)

bzl_library(
    name = "compile_test_bzl",
    srcs = ["compile_test.bzl"],
    visibility = ["//e2e_tests:__subpackages__"],
    deps = [
        "//bazel:fourward_pipeline_bzl",
        "@bazel_skylib//rules:build_test",
    ],
)

bzl_library(
    name = "corpus_bzl",
    srcs = ["corpus.bzl"],
    visibility = ["//e2e_tests:__subpackages__"],
    deps = ["//bazel:fourward_pipeline_bzl"],
)

bzl_library(
    name = "p4testgen_bzl",
    srcs = ["p4testgen.bzl"],
    visibility = ["//e2e_tests:__subpackages__"],
    deps = [
        "//bazel:fourward_pipeline_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
    ],
)

kt_jvm_library(
    name = "runfiles_helper",
    testonly = True,
    srcs = ["RunfilesHelper.kt"],
    visibility = ["//visibility:public"],
    deps = ["@rules_java//java/runfiles"],
)

kt_jvm_library(
    name = "golden_file",
    srcs = ["GoldenFile.kt"],
    visibility = ["//visibility:public"],
    deps = [
        ":runfiles_helper",
        "@fourward_maven//:junit_junit",
    ],
)
